# llm-batch-inference

./: .env.example  .gitignore  README.md  pyproject.toml
src/lbi/: __init__.py  base.py  datamodels.py  exceptions.py  multi.py  openai.py
src/lbi/anthropic/: anthropic.py
src/lbi/gemini/: gemini.py
src/lbi/mistral/: mistral.py
src/lbi/openai/: __init__.py  common.py  inline.py  openai.py
tests/integration/: test_openai_provider_integration.py
tests/unit/: test_openai_provider.py
